--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "bugs": {
     "url": "https://github.com/mohayonao/pseudo-audio-param/issues"
   },
+  "devDependencies": {
+    "istanbul": "^0.4.2",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3"
+  },
   "files": [
     "lib",
     "index.js",
@@ -23,5 +28,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mohayonao/pseudo-audio-param/"
+  },
+  "scripts": {
+    "cover": "istanbul cover --report text --report html --report lcov _mocha",
+    "test": "mocha",
+    "travis": "npm run test"
   }
 }
