--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   },
   "files": [
     "lib",
-    "index.js",
     "package.json",
     "README.md"
   ],
@@ -24,7 +23,7 @@
     "simulator"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/mohayonao/pseudo-audio-param/"
