--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
-    "mocha": "^2.5.3",
-    "sinon": "^1.17.7"
+    "mocha": "^2.5.3"
   },
   "files": [
     "lib",
